[package]
name = "example-acl"
version = "0.1.0"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mosquitto-plugin = { path = "../." }
simple-server = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"

